Fixed z-index

--- a/src/components/game/Game.scss
+++ b/src/components/game/Game.scss
@@ -4,7 +4,7 @@
         position: absolute;
         top: 0;
         right: 0;
-        width: 20%;
+        z-index: 0;
 
         @media screen and (max-width: 400px){
             width: 35%;
